[tool.poetry]
name = "unweaver"
version = "0.1.0"
description = "A flexible, easy to run routing engine."
authors = ["Nick Bolten <nbolten@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
unweaver = "unweaver:cli.unweaver"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
webargs = "^6.1"
click = "^7.0"
entwiner = {git = "https://github.com/nbolten/entwiner.git", rev = "13fb2db"}
shapely = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "18.9b0"
pre-commit = "^1.14"
pytest-cov = "^2.10.1"
requests = "^2.24.0"

[tool.black]
line-length = 80
exclude = """
(
  setup.py
)
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
