[tool.poetry]
name = "unweaver"
version = "0.1.0"
description = "A flexible, easy to run routing engine."
authors = ["Nick Bolten <nbolten@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
unweaver = "unweaver:cli.unweaver"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2"
webargs = "^8.2"
click = "^8.0"
shapely = "^1.6"
Fiona = "^1.8.20"
networkx = "^2.6.3"
geomet = "^0.3.0"
pyproj = "^3.2.1"
osm-humanized-opening-hours = "^0.6.2"
Flask = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "18.9b0"
pre-commit = "^2.9.2"
pytest-cov = "^2.10.1"
requests = "^2.24.0"
mypy = "^0.902"
types-Flask = "^1.1.0"
poetry = "^1.1.8"
setuptools = "^58.1.0"
mkdocs-material = "^8.5.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-click = "^0.8.0"

[tool.black]
line-length = 79
exclude = """
(
  setup.py
)
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
